k8s/starwars-armada/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starwars-armada
  namespace: default
spec:
  selector:
    app: starwars-armada
  ports:
    - port: 8000
