k8s/starwars-armada/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: starwars-armada
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`starwars-armada.home.gaborzeller.com`)
      kind: Rule
      services:
        - name: starwars-armada
          port: 8000
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.home.gaborzeller.com"
